# AI_solo_coder_task_A_204

./: CMakeLists.txt  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  docker-compose.yml
backend/config/: app_config.json
backend/include/: alert_system.h  clickhouse_client.h  common.h  config_loader.h  dem_model.h  genetic_optimizer.h  http_server.h  logger.h  message_queue.h  metrics.h  mqtt_client.h
backend/include/modules/: alarm_mqtt.h  dem_simulator.h  mqtt_receiver.h  size_optimizer.h
backend/src/: alert_system.cpp  clickhouse_client.cpp  common.cpp  config_loader.cpp  dem_model.cpp  genetic_optimizer.cpp  http_server.cpp  logger.cpp  main.cpp  metrics.cpp  mqtt_client.cpp
backend/src/modules/: alarm_mqtt.cpp  dem_simulator.cpp  mqtt_receiver.cpp  size_optimizer.cpp
backend/tests/: test_engineering.py  test_refactor.py
clickhouse/: init.sql
deploy/clickhouse/config/: config.xml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/mosquitto/config/: mosquitto.conf
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  chart.js  mill3d.js  particle_panel.js  stone_roller_3d.js
simulator/: sensor_simulator.py
